# lx16a_servo

./: CMakeLists.txt  LICENSE
config/: servo_default.xml  servo_single.xml
src/: ConfigParser_Lx16a.h  Serial.h  SerialCommand_Lx16a.h  SerialServoHandler.h  Servo_Lx16a.h
src/francor/: Serial.cpp  Serial.h  Time.h  Timer.h  XmlParser.h
src/test/: CMakeLists.txt  test.cpp  test_handler.cpp
src/test/gtest/: gtest_serial_cmd.cpp
src/tools/: find_servos.cpp  servo_set_id.cpp
